Completed most of the cta styling. Will come back for some minor changes to 'align items' to avoid the button taking the height of the div. Also added the cta header and text in a div for easier flexing.

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,25 @@ a {
     font-weight: bolder;
 }
 
+/* cta styling */
+.cta {
+    display: flex;
+    justify-content: center;
+}
+
+.cta-card {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    color: white;
+    margin: 75px;
+    padding: 35px;
+    width: 70%;
+    border-radius: 10px;
+}
+
+
 /* general styling */
 button {
     background-color: dodgerblue;
